fixed some accessibility issues like insufficient contrast, no aria-label for icon links, no html language

--- a/styles/Navigation.module.scss
+++ b/styles/Navigation.module.scss
@@ -32,7 +32,7 @@
 
 .logo {
   margin: 0 auto;
-  background-color: var(--dark);
+  background-color: var(--primary);
   color: var(--light);
   font-size: 2rem;
   border-radius: 50%;
@@ -49,7 +49,7 @@
 .toggleBtn {
   position: relative;
   padding: 8px 12px;
-  background-color: var(--dark);
+  background-color: var(--primary);
   border: none;
   color: var(--light);
   border-radius: 6px;
