--- a/styles/Projects.module.scss
+++ b/styles/Projects.module.scss
@@ -7,6 +7,7 @@
   flex-wrap: wrap;
   gap: 50px;
   justify-content: center;
+  padding-top: 1rem;
 
   article {
     flex: 1;
