--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,10 +3,10 @@
 :root {
   --background: white;
   --text: rgba(0, 0, 0, 0.8);
-  --light-text: rgba(0, 0, 0, 0.5);
-  --primary: #5771f3;
-  --dark: #0b24a1;
-  --light: #cdd5fb;
+  --light-text: rgba(0, 0, 0, 0.6);
+  --primary: #3a5af7;
+  --dark: #071a7e;
+  --light: #ecefff;
   --nav-clr: rgba(87, 113, 243, 0.8);
   --boxshadow: 8px 8px 33px #b0b7d8, -8px -8px 33px #eaf3ff;
   --boxshadow-big: 8px 8px 33px #979db7, -8px -8px 33px #d3e0f1;
@@ -20,7 +20,7 @@
   --text: rgba(255, 255, 255, 0.95);
   --light-text: rgba(255, 255, 255, 0.8);
   --primary: #434d83;
-  --dark: #758af4;
+  --dark: #7f92f3;
   --light: #eaeaea;
   --nav-clr: rgba(54, 54, 54, 0.8);
   --boxshadow: none;
